test/files/neg/bug3683b.check
bug3683b.scala:15: error: constructor cannot be instantiated to expected type;
 found   : X
 required: W[Bar]
      case X() => 1
           ^
one error found
